fix contrast link color validation error

--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ p{
 
 a{
   font-size: 16px;
-  color: #C12258;
+  color: #B21F50;
   text-decoration-line: underline;
   text-decoration-style: wavy;
 }
